added RL and GC analyses

--- a/02-scripts.backup/MID_sub10M_sub75bp_numbers.Rmd
+++ b/02-scripts.backup/MID_sub10M_sub75bp_numbers.Rmd
@@ -58,7 +58,8 @@ full_metadata %>%
     theme(axis.text.x = element_text(angle = 90, hjust = 1, vjust = 0.5),
           text = element_text(size=12)) +
     scale_y_continuous(breaks=scales::pretty_breaks(n=8)) +
-    geom_hline(yintercept = 5000000, linetype = "dotted")
+    geom_hline(yintercept = 5000000, linetype = "dotted") +
+    ylab("No. reads")
   
 full_metadata %>%
   select(Library_ID, No_reads_no_human, No_reads_10M, No_reads_75bp) %>%
@@ -75,7 +76,8 @@ full_metadata %>%
           text = element_text(size=12)) +
     scale_y_continuous(breaks=scales::pretty_breaks(n=8)) +
     geom_hline(yintercept = 5000000, linetype = "dotted") +
-    geom_hline(yintercept = 2500000, linetype = "dotted")
+    geom_hline(yintercept = 2500000, linetype = "dotted") +
+    ylab("No. reads")
 
 full_metadata %>%
   select(Library_ID, No_reads_no_human, No_reads_10M, No_reads_75bp) %>%
@@ -91,7 +93,8 @@ full_metadata %>%
           text = element_text(size=12)) +
     scale_y_continuous(breaks=scales::pretty_breaks(n=8)) +
     geom_hline(yintercept = 5000000, linetype = "dotted") +
-    geom_hline(yintercept = 2500000, linetype = "dotted")
+    geom_hline(yintercept = 2500000, linetype = "dotted") +
+    ylab("No. reads")
 
 full_metadata %>%
   select(Library_ID, No_reads_no_human, No_reads_10M, No_reads_75bp) %>%
@@ -106,7 +109,8 @@ full_metadata %>%
     theme(axis.text.x = element_text(angle = 90, hjust = 1, vjust = 0.5),
           text = element_text(size=12)) +
     scale_y_continuous(breaks=scales::pretty_breaks(n=8)) +
-    geom_hline(yintercept = 5000000, linetype = "dotted")
+    geom_hline(yintercept = 5000000, linetype = "dotted") +
+    ylab("No. reads")
 
 full_metadata %>%
   select(Library_ID, No_reads_no_human, No_reads_10M, No_reads_75bp) %>%
@@ -122,7 +126,8 @@ full_metadata %>%
           text = element_text(size=12)) +
     scale_y_continuous(breaks=scales::pretty_breaks(n=8)) +
     geom_hline(yintercept = 10000000, linetype = "dotted") +
-    geom_hline(yintercept = 20000000, linetype = "dotted")
+    geom_hline(yintercept = 20000000, linetype = "dotted") +
+    ylab("No. reads")
 
 ```
 
@@ -143,7 +148,8 @@ full_metadata %>%
           text = element_text(size=12)) +
     scale_y_continuous(breaks=scales::pretty_breaks(n=8)) +
     geom_hline(yintercept = 5000000, linetype = "dotted") +
-  facet_wrap(~Seq_depth, nrow = 1)
+  facet_wrap(~Seq_depth, nrow = 1) +
+    ylab("No. reads")
   
 full_metadata %>%
   select(Library_ID, No_reads_no_human, No_reads_10M, No_reads_75bp) %>%
@@ -160,7 +166,8 @@ full_metadata %>%
           text = element_text(size=12)) +
     scale_y_continuous(breaks=scales::pretty_breaks(n=8)) +
     geom_hline(yintercept = 5000000, linetype = "dotted") +
-  facet_wrap(~Seq_depth, nrow = 1)
+  facet_wrap(~Seq_depth, nrow = 1) +
+    ylab("No. reads")
   
 
 full_metadata %>%
@@ -178,7 +185,8 @@ full_metadata %>%
           text = element_text(size=12)) +
     scale_y_continuous(breaks=scales::pretty_breaks(n=8)) +
     geom_hline(yintercept = 5000000, linetype = "dotted") +
-  facet_wrap(~Seq_depth, nrow = 1)
+  facet_wrap(~Seq_depth, nrow = 1) +
+    ylab("No. reads")
 
 full_metadata %>%
   select(Library_ID, No_reads_no_human, No_reads_10M, No_reads_75bp) %>%
@@ -195,18 +203,59 @@ full_metadata %>%
           text = element_text(size=12)) +
     scale_y_continuous(breaks=scales::pretty_breaks(n=8)) +
     geom_hline(yintercept = 5000000, linetype = "dotted") +
-  facet_wrap(~Seq_depth, nrow = 1)
+  facet_wrap(~Seq_depth, nrow = 1) +
+    ylab("No. reads")
 
 ```
+
+Summary box plots
+```{r seqdepth_box}
+full_metadata %>%
+  select(Library_ID, Site, No_reads_no_human, No_reads_10M, No_reads_75bp) %>%
+  filter(!str_detect(Library_ID, "EXB|LIB|CSS|CSL|CSD|CSN")) %>%
+  gather("Seq_depth", "Read_counts", 3:ncol(.)) %>%
+  mutate(Seq_depth = fct_relevel(Seq_depth, "No_reads_no_human","No_reads_10M","No_reads_75bp"),
+         Site = fct_relevel(Site, "Jaen","Middenbeemster","CMB","Radcliffe","Kilteasheen","ELR","IVE")) %>%
+  ggplot(., aes(x = Site, y = Read_counts, fill = Seq_depth)) +
+    geom_violin() +
+    theme_minimal() +
+    scale_fill_manual(values = colors3) +
+    theme(axis.text.x = element_text(angle = 90, hjust = 1, vjust = 0.5),
+          text = element_text(size=12)) +
+    scale_y_continuous(breaks=scales::pretty_breaks(n=8)) +
+    geom_hline(yintercept = 5000000, linetype = "dotted") +
+    ylab("No. reads")
+
+# one without modern calculus
+full_metadata %>%
+  select(Library_ID, Site, No_reads_no_human, No_reads_10M, No_reads_75bp) %>%
+  filter(!str_detect(Library_ID, "EXB|LIB|CSS|CSL|CSD|CSN|JAE")) %>%
+  gather("Seq_depth", "Read_counts", 3:ncol(.)) %>%
+  mutate(Seq_depth = fct_relevel(Seq_depth, "No_reads_no_human","No_reads_10M","No_reads_75bp"),
+         Site = fct_relevel(Site, "Jaen","Middenbeemster","CMB","Radcliffe","Kilteasheen","ELR","IVE")) %>%
+  ggplot(., aes(x = Site, y = Read_counts, fill = Seq_depth)) +
+    geom_boxplot() +
+    geom_jitter(alpha = 0.3, position = position_jitterdodge(jitter.width = 0.1), size = 1) +
+    theme_minimal() +
+    scale_fill_manual(values = colors3) +
+    theme(axis.text.x = element_text(angle = 90, hjust = 1, vjust = 0.5),
+          text = element_text(size=12)) +
+    scale_y_continuous(breaks=scales::pretty_breaks(n=8)) +
+    geom_hline(yintercept = 5000000, linetype = "dotted") +
+   ylab("No. reads")
+
+```
+
+
 
 # Average Read Length
 ```{r rl_groups}
 full_metadata %>%
   select(Library_ID, seq_len_avg, seq_len_avg_10M, seq_len_avg_75bp) %>%
   filter(str_detect(Library_ID, "CMB|MID")) %>%
-  gather("Seq_depth", "Read_length", 2:ncol(.)) %>%
-  mutate(Seq_depth = fct_relevel(Seq_depth, "seq_len_avg","seq_len_avg_10M","seq_len_avg_75bp")) %>%
-  ggplot(., aes(x = Library_ID, y = Read_length, shape = Seq_depth, bg = Seq_depth)) +
+  gather("Seq_length", "Read_length", 2:ncol(.)) %>%
+  mutate(Seq_length = fct_relevel(Seq_length, "seq_len_avg","seq_len_avg_10M","seq_len_avg_75bp")) %>%
+  ggplot(., aes(x = Library_ID, y = Read_length, shape = Seq_length, bg = Seq_length)) +
     geom_point(size = 3, color = "grey50") +
     theme_minimal() +
     scale_fill_manual(values = colors3) +
@@ -222,9 +271,9 @@ full_metadata %>%
   select(Library_ID, seq_len_avg, seq_len_avg_10M, seq_len_avg_75bp) %>%
   filter(str_detect(Library_ID, "CS")) %>%
   filter(!str_detect(Library_ID, "L|D|N|SS")) %>%
-  gather("Seq_depth", "Read_length", 2:ncol(.)) %>%
-  mutate(Seq_depth = fct_relevel(Seq_depth, "seq_len_avg","seq_len_avg_10M","seq_len_avg_75bp")) %>%
-  ggplot(., aes(x = Library_ID, y = Read_length, shape = Seq_depth, bg = Seq_depth)) +
+  gather("Seq_length", "Read_length", 2:ncol(.)) %>%
+  mutate(Seq_length = fct_relevel(Seq_length, "seq_len_avg","seq_len_avg_10M","seq_len_avg_75bp")) %>%
+  ggplot(., aes(x = Library_ID, y = Read_length, shape = Seq_length, bg = Seq_length)) +
     geom_point(size = 3, color = "grey50") +
     theme_minimal() +
     scale_fill_manual(values = colors3) +
@@ -239,9 +288,9 @@ full_metadata %>%
 full_metadata %>%
   select(Library_ID, seq_len_avg, seq_len_avg_10M, seq_len_avg_75bp) %>%
   filter(str_detect(Library_ID, "KT")) %>%
-  gather("Seq_depth", "Read_length", 2:ncol(.)) %>%
-  mutate(Seq_depth = fct_relevel(Seq_depth, "seq_len_avg","seq_len_avg_10M","seq_len_avg_75bp")) %>%
-  ggplot(., aes(x = Library_ID, y = Read_length, shape = Seq_depth, bg = Seq_depth)) +
+  gather("Seq_length", "Read_length", 2:ncol(.)) %>%
+  mutate(Seq_length = fct_relevel(Seq_length, "seq_len_avg","seq_len_avg_10M","seq_len_avg_75bp")) %>%
+  ggplot(., aes(x = Library_ID, y = Read_length, shape = Seq_length, bg = Seq_length)) +
     geom_point(size = 3, color = "grey50") +
     theme_minimal() +
     scale_fill_manual(values = colors3) +
@@ -256,9 +305,9 @@ full_metadata %>%
 full_metadata %>%
   select(Library_ID, seq_len_avg, seq_len_avg_10M, seq_len_avg_75bp) %>%
   filter(str_detect(Library_ID, "ELR|IVE")) %>%
-  gather("Seq_depth", "Read_length", 2:ncol(.)) %>%
-  mutate(Seq_depth = fct_relevel(Seq_depth, "seq_len_avg","seq_len_avg_10M","seq_len_avg_75bp")) %>%
-  ggplot(., aes(x = Library_ID, y = Read_length, shape = Seq_depth, bg = Seq_depth)) +
+  gather("Seq_length", "Read_length", 2:ncol(.)) %>%
+  mutate(Seq_length = fct_relevel(Seq_length, "seq_len_avg","seq_len_avg_10M","seq_len_avg_75bp")) %>%
+  ggplot(., aes(x = Library_ID, y = Read_length, shape = Seq_length, bg = Seq_length)) +
     geom_point(size = 3, color = "grey50") +
     theme_minimal() +
     scale_fill_manual(values = colors3) +
@@ -273,9 +322,9 @@ full_metadata %>%
 full_metadata %>%
   select(Library_ID, seq_len_avg, seq_len_avg_10M, seq_len_avg_75bp) %>%
   filter(str_detect(Library_ID, "JAE")) %>%
-  gather("Seq_depth", "Read_length", 2:ncol(.)) %>%
-  mutate(Seq_depth = fct_relevel(Seq_depth, "seq_len_avg","seq_len_avg_10M","seq_len_avg_75bp")) %>%
-  ggplot(., aes(x = Library_ID, y = Read_length, shape = Seq_depth, bg = Seq_depth)) +
+  gather("Seq_length", "Read_length", 2:ncol(.)) %>%
+  mutate(Seq_length = fct_relevel(Seq_length, "seq_len_avg","seq_len_avg_10M","seq_len_avg_75bp")) %>%
+  ggplot(., aes(x = Library_ID, y = Read_length, shape = Seq_length, bg = Seq_length)) +
     geom_point(size = 3, color = "grey50") +
     theme_minimal() +
     scale_fill_manual(values = colors3) +
@@ -294,10 +343,10 @@ full_metadata %>%
 full_metadata %>%
   select(Library_ID, Site, seq_len_avg, seq_len_avg_10M, seq_len_avg_75bp) %>%
   filter(!str_detect(Library_ID, "EXB|LIB|CSS|CSL|CSD|CSN")) %>%
-  gather("Seq_depth", "Read_length", 3:ncol(.)) %>%
-  mutate(Seq_depth = fct_relevel(Seq_depth, "seq_len_avg","seq_len_avg_10M","seq_len_avg_75bp"),
+  gather("Seq_length", "Read_length", 3:ncol(.)) %>%
+  mutate(Seq_length = fct_relevel(Seq_length, "seq_len_avg","seq_len_avg_10M","seq_len_avg_75bp"),
          Library_ID= fct_relevel(Library_ID, sample_order)) %>%
-  ggplot(., aes(x = Library_ID, y = Read_length, shape = Seq_depth, bg = Seq_depth)) +
+  ggplot(., aes(x = Library_ID, y = Read_length, shape = Seq_length, bg = Seq_length)) +
     geom_point(size = 2, color = "grey50") +
     theme_minimal() +
     scale_fill_manual(values = colors3) +
@@ -307,15 +356,15 @@ full_metadata %>%
     scale_y_continuous(breaks=scales::pretty_breaks(n=8)) +
     geom_hline(yintercept = 50, linetype = "dotted") +
     ylab("Avg. read length (bp)") +
-  facet_wrap(~Seq_depth, nrow = 1)
+  facet_wrap(~Seq_length, nrow = 1)
   
 full_metadata %>%
   select(Library_ID, seq_len_avg, seq_len_avg_10M, seq_len_avg_75bp) %>%
   filter(!str_detect(Library_ID, "EXB|LIB|CSS|CSL|CSD|CSN")) %>%
-  gather("Seq_depth", "Read_length", 2:ncol(.)) %>%
-  filter(Seq_depth == "seq_len_avg") %>%  
+  gather("Seq_length", "Read_length", 2:ncol(.)) %>%
+  filter(Seq_length == "seq_len_avg") %>%  
   mutate(Library_ID= fct_relevel(Library_ID, sample_order)) %>%
-  ggplot(., aes(x = Library_ID, y = Read_length, shape = Seq_depth, bg = Seq_depth)) +
+  ggplot(., aes(x = Library_ID, y = Read_length, shape = Seq_length, bg = Seq_length)) +
     geom_point(size = 3, color = "grey50") +
     theme_minimal() +
     scale_fill_manual(values = colors3) +
@@ -330,10 +379,10 @@ full_metadata %>%
 full_metadata %>%
   select(Library_ID, seq_len_avg, seq_len_avg_10M, seq_len_avg_75bp) %>%
   filter(!str_detect(Library_ID, "EXB|LIB|CSS|CSL|CSD|CSN")) %>%
-  gather("Seq_depth", "Read_length", 2:ncol(.)) %>%
-  filter(Seq_depth == "seq_len_avg_10M") %>%  
+  gather("Seq_length", "Read_length", 2:ncol(.)) %>%
+  filter(Seq_length == "seq_len_avg_10M") %>%  
   mutate(Library_ID= fct_relevel(Library_ID, sample_order)) %>%
-  ggplot(., aes(x = Library_ID, y = Read_length, shape = Seq_depth, bg = Seq_depth)) +
+  ggplot(., aes(x = Library_ID, y = Read_length, shape = Seq_length, bg = Seq_length)) +
     geom_point(size = 3, color = "grey50") +
     theme_minimal() +
     scale_fill_manual(values = colors3[2]) +
@@ -347,10 +396,10 @@ full_metadata %>%
 full_metadata %>%
   select(Library_ID, seq_len_avg, seq_len_avg_10M, seq_len_avg_75bp) %>%
   filter(!str_detect(Library_ID, "EXB|LIB|CSS|CSL|CSD|CSN")) %>%
-  gather("Seq_depth", "Read_length", 2:ncol(.)) %>%
-  filter(Seq_depth == "seq_len_avg_75bp") %>%  
+  gather("Seq_length", "Read_length", 2:ncol(.)) %>%
+  filter(Seq_length == "seq_len_avg_75bp") %>%  
   mutate(Library_ID= fct_relevel(Library_ID, sample_order)) %>%
-  ggplot(., aes(x = Library_ID, y = Read_length, shape = Seq_depth, bg = Seq_depth)) +
+  ggplot(., aes(x = Library_ID, y = Read_length, shape = Seq_length, bg = Seq_length)) +
     geom_point(size = 3, color = "grey50") +
     theme_minimal() +
     scale_fill_manual(values = colors3[3]) +
@@ -363,14 +412,35 @@ full_metadata %>%
 
 ```
 
+Summary box plots
+```{r rl_box}
+full_metadata %>%
+  select(Library_ID, Site, seq_len_avg, seq_len_avg_10M, seq_len_avg_75bp) %>%
+  filter(!str_detect(Library_ID, "EXB|LIB|CSS|CSL|CSD|CSN")) %>%
+  gather("Seq_length", "Read_counts", 3:ncol(.)) %>%
+  mutate(Seq_length = fct_relevel(Seq_length, "seq_len_avg","seq_len_avg_10M","seq_len_avg_75bp"),
+         Site = fct_relevel(Site, "Jaen","Middenbeemster","CMB","Radcliffe","Kilteasheen","ELR","IVE")) %>%
+  ggplot(., aes(x = Site, y = Read_counts, fill = Seq_length)) +
+    geom_boxplot() +
+    geom_jitter(alpha = 0.3, position = position_jitterdodge(jitter.width = 0.1), size = 1) +
+    theme_minimal() +
+    scale_fill_manual(values = colors3) +
+    theme(axis.text.x = element_text(angle = 90, hjust = 1, vjust = 0.5),
+          text = element_text(size=12)) +
+    scale_y_continuous(breaks=scales::pretty_breaks(n=8)) +
+    geom_hline(yintercept = 50, linetype = "dotted") +
+    ylab("Avg. read length (bp)")
+
+```
+
 # Average %GC 
 ```{r gc_groups}
 full_metadata %>%
   select(Library_ID, gc_avg, gc_avg_10M, gc_avg_75bp) %>%
   filter(str_detect(Library_ID, "CMB|MID")) %>%
-  gather("Seq_depth", "Read_length", 2:ncol(.)) %>%
-  mutate(Seq_depth = fct_relevel(Seq_depth, "gc_avg","gc_avg_10M","gc_avg_75bp")) %>%
-  ggplot(., aes(x = Library_ID, y = Read_length, shape = Seq_depth, bg = Seq_depth)) +
+  gather("GC", "Read_length", 2:ncol(.)) %>%
+  mutate(GC = fct_relevel(GC, "gc_avg","gc_avg_10M","gc_avg_75bp")) %>%
+  ggplot(., aes(x = Library_ID, y = Read_length, shape = GC, bg = GC)) +
     geom_point(size = 3, color = "grey50") +
     theme_minimal() +
     scale_fill_manual(values = colors3) +
@@ -386,9 +456,9 @@ full_metadata %>%
   select(Library_ID, gc_avg, gc_avg_10M, gc_avg_75bp) %>%
   filter(str_detect(Library_ID, "CS")) %>%
   filter(!str_detect(Library_ID, "L|D|N|SS")) %>%
-  gather("Seq_depth", "Read_length", 2:ncol(.)) %>%
-  mutate(Seq_depth = fct_relevel(Seq_depth, "gc_avg","gc_avg_10M","gc_avg_75bp")) %>%
-  ggplot(., aes(x = Library_ID, y = Read_length, shape = Seq_depth, bg = Seq_depth)) +
+  gather("GC", "Read_length", 2:ncol(.)) %>%
+  mutate(GC = fct_relevel(GC, "gc_avg","gc_avg_10M","gc_avg_75bp")) %>%
+  ggplot(., aes(x = Library_ID, y = Read_length, shape = GC, bg = GC)) +
     geom_point(size = 3, color = "grey50") +
     theme_minimal() +
     scale_fill_manual(values = colors3) +
@@ -403,9 +473,9 @@ full_metadata %>%
 full_metadata %>%
   select(Library_ID, gc_avg, gc_avg_10M, gc_avg_75bp) %>%
   filter(str_detect(Library_ID, "KT")) %>%
-  gather("Seq_depth", "Read_length", 2:ncol(.)) %>%
-  mutate(Seq_depth = fct_relevel(Seq_depth, "gc_avg","gc_avg_10M","gc_avg_75bp")) %>%
-  ggplot(., aes(x = Library_ID, y = Read_length, shape = Seq_depth, bg = Seq_depth)) +
+  gather("GC", "Read_length", 2:ncol(.)) %>%
+  mutate(GC = fct_relevel(GC, "gc_avg","gc_avg_10M","gc_avg_75bp")) %>%
+  ggplot(., aes(x = Library_ID, y = Read_length, shape = GC, bg = GC)) +
     geom_point(size = 3, color = "grey50") +
     theme_minimal() +
     scale_fill_manual(values = colors3) +
@@ -420,9 +490,9 @@ full_metadata %>%
 full_metadata %>%
   select(Library_ID, gc_avg, gc_avg_10M, gc_avg_75bp) %>%
   filter(str_detect(Library_ID, "ELR|IVE")) %>%
-  gather("Seq_depth", "Read_length", 2:ncol(.)) %>%
-  mutate(Seq_depth = fct_relevel(Seq_depth, "gc_avg","gc_avg_10M","gc_avg_75bp")) %>%
-  ggplot(., aes(x = Library_ID, y = Read_length, shape = Seq_depth, bg = Seq_depth)) +
+  gather("GC", "Read_length", 2:ncol(.)) %>%
+  mutate(GC = fct_relevel(GC, "gc_avg","gc_avg_10M","gc_avg_75bp")) %>%
+  ggplot(., aes(x = Library_ID, y = Read_length, shape = GC, bg = GC)) +
     geom_point(size = 3, color = "grey50") +
     theme_minimal() +
     scale_fill_manual(values = colors3) +
@@ -437,9 +507,9 @@ full_metadata %>%
 full_metadata %>%
   select(Library_ID, gc_avg, gc_avg_10M, gc_avg_75bp) %>%
   filter(str_detect(Library_ID, "JAE")) %>%
-  gather("Seq_depth", "Read_length", 2:ncol(.)) %>%
-  mutate(Seq_depth = fct_relevel(Seq_depth, "gc_avg","gc_avg_10M","gc_avg_75bp")) %>%
-  ggplot(., aes(x = Library_ID, y = Read_length, shape = Seq_depth, bg = Seq_depth)) +
+  gather("GC", "Read_length", 2:ncol(.)) %>%
+  mutate(GC = fct_relevel(GC, "gc_avg","gc_avg_10M","gc_avg_75bp")) %>%
+  ggplot(., aes(x = Library_ID, y = Read_length, shape = GC, bg = GC)) +
     geom_point(size = 3, color = "grey50") +
     theme_minimal() +
     scale_fill_manual(values = colors3) +
@@ -458,10 +528,10 @@ full_metadata %>%
 full_metadata %>%
   select(Library_ID, Site, gc_avg, gc_avg_10M, gc_avg_75bp) %>%
   filter(!str_detect(Library_ID, "EXB|LIB|CSS|CSL|CSD|CSN")) %>%
-  gather("Seq_depth", "Read_length", 3:ncol(.)) %>%
-  mutate(Seq_depth = fct_relevel(Seq_depth, "gc_avg","gc_avg_10M","gc_avg_75bp"),
+  gather("GC", "Read_length", 3:ncol(.)) %>%
+  mutate(GC = fct_relevel(GC, "gc_avg","gc_avg_10M","gc_avg_75bp"),
          Library_ID= fct_relevel(Library_ID, sample_order)) %>%
-  ggplot(., aes(x = Library_ID, y = Read_length, shape = Seq_depth, bg = Seq_depth)) +
+  ggplot(., aes(x = Library_ID, y = Read_length, shape = GC, bg = GC)) +
     geom_point(size = 2, color = "grey50") +
     theme_minimal() +
     scale_fill_manual(values = colors3) +
@@ -471,15 +541,15 @@ full_metadata %>%
     scale_y_continuous(breaks=scales::pretty_breaks(n=8)) +
     geom_hline(yintercept = 50, linetype = "dotted") +
     ylab("Avg %GC") +
-  facet_wrap(~Seq_depth, nrow = 1)
+  facet_wrap(~GC, nrow = 1)
   
 full_metadata %>%
   select(Library_ID, gc_avg, gc_avg_10M, gc_avg_75bp) %>%
   filter(!str_detect(Library_ID, "EXB|LIB|CSS|CSL|CSD|CSN")) %>%
-  gather("Seq_depth", "Read_length", 2:ncol(.)) %>%
-  filter(Seq_depth == "gc_avg") %>%  
+  gather("GC", "Read_length", 2:ncol(.)) %>%
+  filter(GC == "gc_avg") %>%  
   mutate(Library_ID= fct_relevel(Library_ID, sample_order)) %>%
-  ggplot(., aes(x = Library_ID, y = Read_length, shape = Seq_depth, bg = Seq_depth)) +
+  ggplot(., aes(x = Library_ID, y = Read_length, shape = GC, bg = GC)) +
     geom_point(size = 3, color = "grey50") +
     theme_minimal() +
     scale_fill_manual(values = colors3) +
@@ -494,10 +564,10 @@ full_metadata %>%
 full_metadata %>%
   select(Library_ID, gc_avg, gc_avg_10M, gc_avg_75bp) %>%
   filter(!str_detect(Library_ID, "EXB|LIB|CSS|CSL|CSD|CSN")) %>%
-  gather("Seq_depth", "Read_length", 2:ncol(.)) %>%
-  filter(Seq_depth == "gc_avg_10M") %>%  
+  gather("GC", "Read_length", 2:ncol(.)) %>%
+  filter(GC == "gc_avg_10M") %>%  
   mutate(Library_ID= fct_relevel(Library_ID, sample_order)) %>%
-  ggplot(., aes(x = Library_ID, y = Read_length, shape = Seq_depth, bg = Seq_depth)) +
+  ggplot(., aes(x = Library_ID, y = Read_length, shape = GC, bg = GC)) +
     geom_point(size = 3, color = "grey50") +
     theme_minimal() +
     scale_fill_manual(values = colors3[2]) +
@@ -511,10 +581,10 @@ full_metadata %>%
 full_metadata %>%
   select(Library_ID, gc_avg, gc_avg_10M, gc_avg_75bp) %>%
   filter(!str_detect(Library_ID, "EXB|LIB|CSS|CSL|CSD|CSN")) %>%
-  gather("Seq_depth", "Read_length", 2:ncol(.)) %>%
-  filter(Seq_depth == "gc_avg_75bp") %>%  
+  gather("GC", "Read_length", 2:ncol(.)) %>%
+  filter(GC == "gc_avg_75bp") %>%  
   mutate(Library_ID= fct_relevel(Library_ID, sample_order)) %>%
-  ggplot(., aes(x = Library_ID, y = Read_length, shape = Seq_depth, bg = Seq_depth)) +
+  ggplot(., aes(x = Library_ID, y = Read_length, shape = GC, bg = GC)) +
     geom_point(size = 3, color = "grey50") +
     theme_minimal() +
     scale_fill_manual(values = colors3[3]) +
@@ -527,7 +597,28 @@ full_metadata %>%
 
 ```
 
+Summary box plots
+```{r gc_box}
+full_metadata %>%
+  select(Library_ID, Site, gc_avg, gc_avg_10M, gc_avg_75bp) %>%
+  filter(!str_detect(Library_ID, "EXB|LIB|CSS|CSL|CSD|CSN")) %>%
+  gather("GC", "Read_counts", 3:ncol(.)) %>%
+  mutate(GC = fct_relevel(GC, "gc_avg","gc_avg_10M","gc_avg_75bp"),
+         Site = fct_relevel(Site, "Jaen","Middenbeemster","CMB","Radcliffe","Kilteasheen","ELR","IVE")) %>%
+  ggplot(., aes(x = Site, y = Read_counts, fill = GC)) +
+    geom_boxplot() +
+    geom_jitter(alpha = 0.3, position = position_jitterdodge(jitter.width = 0.25), size = 1) +
+    theme_minimal() +
+    scale_fill_manual(values = colors3) +
+    theme(axis.text.x = element_text(angle = 90, hjust = 1, vjust = 0.5),
+          text = element_text(size=12)) +
+    scale_y_continuous(breaks=scales::pretty_breaks(n=8)) +
+    geom_hline(yintercept = 50, linetype = "dotted") +
+    ylab("Avg. %GC")
 
+```
+
+Test for significant differences between groups?
 
 
 
